<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDateChange"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/button_date_change"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/btnDateChange"
        app:layout_constraintEnd_toStartOf="@id/btnDateChange"
        app:layout_constraintTop_toTopOf="@id/btnDateChange"
        tools:text="28/12/2020" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDateChange">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/exchange_name"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glBuy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBuy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exchange_buy"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tvName"
            app:layout_constraintEnd_toStartOf="@id/glTransfer"
            app:layout_constraintStart_toStartOf="@id/glBuy"
            app:layout_constraintTop_toTopOf="@id/tvName" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glTransfer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.6" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTransfer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exchange_transfer"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tvName"
            app:layout_constraintEnd_toStartOf="@id/glSell"
            app:layout_constraintStart_toStartOf="@id/glTransfer"
            app:layout_constraintTop_toTopOf="@id/tvName" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glSell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exchange_sell"
            android:textColor="@android:color/holo_red_light"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tvName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/glSell"
            app:layout_constraintTop_toTopOf="@id/tvName" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvExchange"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clTitle"
        tools:itemCount="10"
        tools:listitem="@layout/item_exchange" />

</androidx.constraintlayout.widget.ConstraintLayout>